# crypto-trading-app

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json  readme.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.mjs  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Chart.vue  EmptyBlock.vue  Filters.vue  InstrumentList.vue  Navigation.vue
frontend/src/components/chart/: CandlesAndVolume.vue  Drawings.vue  IndicatorsList.vue  ObjectTree.vue
frontend/src/shims/: process-shim.js
frontend/src/stores/: chart.js
redis-data/: dump.rdb
src/: app_state.rs  binance.rs  database.rs  main.rs  models.rs  routes.rs  websocket.rs
static/: index-B1Uxg_ZQ.css  index-BWawymzJ.js  index-BhQxkkMi.css  index-C02isN9K.css  index-CbZXOAqP.css  index-DH31lqP7.js  index-DHi6fZGA.css  index-DOl_idrO.js  index-DhmAkj2o.css  index-DpgepI5I.js  index-KTkGstuE.js  index-Mb1u-03p.js  index-SxzhvfSN.js  index-Vvb-qRZ2.css  index-oBGU92HR.js  index.html
