[package]
name = "crypto-trading-app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
actix-web = "4.9.0"
actix-web-actors = "4.3.0"
actix = "0.13.5"
actix-files = "0.6.6"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", default-features = false, features = ["connect", "native-tls"] }
tokio-stream = "0.1"
futures-util = "0.3.31"
env_logger = "0.11.5"
log = "0.4"
reqwest = { version = "0.12.7", features = ["json"] }
redis = "0.25"